--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ function update(){
     }
 
     if (numString == 0) {
-        document.getElementById('container').innerHTML = 'messeg tell to enter numbers';
+        document.getElementById('container').innerHTML = 'Please enter a number';
         return;
     }
 
@@ -105,7 +105,13 @@ function triConvert(num){
 </script>
 
 </head>
-<body>
+
+        <body style="background-color:powderblue;">
+
+
+    <h1 style="color:blue;">Code Assingment Way2b1 </h1>
+        <h2 style="color:blue;"> Convert a non-negative integer to its english words representation </h2>
+    <div>
 
 <input type="text"
     id="number"
@@ -119,6 +125,8 @@ function triConvert(num){
                     || (event.keyCode>34 && event.keyCode<40) 
                     || (event.keyCode==46) )"/>
                     <br/>
-<div id="container">Here The Numbers Printed</div>
+    </div>
+                  
+<div id="container"  style="background-color:GreenYellow;width:200px;border:1px solid black;padding:15px;">English word printed: </div>
 </body>
 </html>
