--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function triConvert(num){
         <body style="background-color:powderblue;">
 
 
-    <h1 style="color:blue;">Code Assingment Way2b1 </h1>
+    <h1 style="color:blue;">Code Assignment Way2b1 </h1>
         <h2 style="color:blue;"> Convert a non-negative integer to its english words representation </h2>
     <div>
 
