--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@ function triConvert(num){
         <body style="background-color:powderblue;">
 
 
-    <h1 style="color:blue;">Code Assignment Way2b1 </h1>
-        <h2 style="color:blue;"> Convert a non-negative integer to its english words representation </h2>
-    <div>
-
+    <h1 style="color:blue; text-align:center;">Code Assignment Way2b1 </h1>
+        <h2 style="color:blue; text-align:center;"> Convert a non-negative integer to its english word representation </h2>
+    
+ <h4 style="color: green;"> Please Enter a number:  </h4>
+ <div>
 <input type="text"
     id="number"
     size="70"
@@ -127,6 +128,6 @@ function triConvert(num){
                     <br/>
     </div>
                   
-<div id="container"  style="background-color:GreenYellow;width:200px;border:1px solid black;padding:15px;">English word printed: </div>
+<div id="container"  style="background-color:GreenYellow;width:200px;border:1px solid black;padding:15px;"> English word printed: </div>
 </body>
 </html>
